--- a/SOURCE/STM32_LAB3.ioc
+++ b/SOURCE/STM32_LAB3.ioc
@@ -15,8 +15,11 @@ Mcu.Package=UFQFPN48
 Mcu.Pin0=PA0-WKUP
 Mcu.Pin1=PA1
 Mcu.Pin2=PA2
-Mcu.Pin3=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=4
+Mcu.Pin3=PA3
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
+Mcu.Pin6=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Ux
@@ -46,6 +49,18 @@ PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=led_yellow1
 PA2.Locked=true
 PA2.Signal=GPIO_Output
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=led_red2
+PA3.Locked=true
+PA3.Signal=GPIO_Output
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=led_green2
+PA4.Locked=true
+PA4.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=led_yellow2
+PA5.Locked=true
+PA5.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
