--- a/SOURCE/STM32_LAB3.ioc
+++ b/SOURCE/STM32_LAB3.ioc
@@ -14,12 +14,30 @@ Mcu.Name=STM32F103C6Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PA0-WKUP
 Mcu.Pin1=PA1
+Mcu.Pin10=PB10
+Mcu.Pin11=PB11
+Mcu.Pin12=PA8
+Mcu.Pin13=PA9
+Mcu.Pin14=PA10
+Mcu.Pin15=PA12
+Mcu.Pin16=PA13
+Mcu.Pin17=PB3
+Mcu.Pin18=PB4
+Mcu.Pin19=PB5
 Mcu.Pin2=PA2
+Mcu.Pin20=PB6
+Mcu.Pin21=PB7
+Mcu.Pin22=PB8
+Mcu.Pin23=PB9
+Mcu.Pin24=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
-Mcu.Pin6=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=7
+Mcu.Pin6=PA7
+Mcu.Pin7=PB0
+Mcu.Pin8=PB1
+Mcu.Pin9=PB2
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Ux
@@ -45,6 +63,18 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=led_green1
 PA1.Locked=true
 PA1.Signal=GPIO_Output
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=en3
+PA10.Locked=true
+PA10.Signal=GPIO_Output
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=chan2f
+PA12.Locked=true
+PA12.Signal=GPIO_Output
+PA13.GPIOParameters=GPIO_Label
+PA13.GPIO_Label=chan2g
+PA13.Locked=true
+PA13.Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=led_yellow1
 PA2.Locked=true
@@ -61,6 +91,66 @@ PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=led_yellow2
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=en0
+PA7.Locked=true
+PA7.Signal=GPIO_Output
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=en1
+PA8.Locked=true
+PA8.Signal=GPIO_Output
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=en2
+PA9.Locked=true
+PA9.Signal=GPIO_Output
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=chan1a
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=chan1b
+PB1.Locked=true
+PB1.Signal=GPIO_Output
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=chan2d
+PB10.Locked=true
+PB10.Signal=GPIO_Output
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=chan2e
+PB11.Locked=true
+PB11.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=chan1c
+PB2.Locked=true
+PB2.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=chan1d
+PB3.Locked=true
+PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=chan1e
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=chan1f
+PB5.Locked=true
+PB5.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=chan1g
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=chan2a
+PB7.Locked=true
+PB7.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=chan2b
+PB8.Locked=true
+PB8.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=chan2c
+PB9.Locked=true
+PB9.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
