--- a/SOURCE/STM32_LAB3.ioc
+++ b/SOURCE/STM32_LAB3.ioc
@@ -16,20 +16,23 @@ Mcu.Pin0=PA0-WKUP
 Mcu.Pin1=PA1
 Mcu.Pin10=PB10
 Mcu.Pin11=PB11
-Mcu.Pin12=PA8
-Mcu.Pin13=PA9
-Mcu.Pin14=PA10
-Mcu.Pin15=PA12
-Mcu.Pin16=PA13
-Mcu.Pin17=PB3
-Mcu.Pin18=PB4
-Mcu.Pin19=PB5
+Mcu.Pin12=PB12
+Mcu.Pin13=PB13
+Mcu.Pin14=PA8
+Mcu.Pin15=PA9
+Mcu.Pin16=PA10
+Mcu.Pin17=PA12
+Mcu.Pin18=PA13
+Mcu.Pin19=PA14
 Mcu.Pin2=PA2
-Mcu.Pin20=PB6
-Mcu.Pin21=PB7
-Mcu.Pin22=PB8
-Mcu.Pin23=PB9
-Mcu.Pin24=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=PB3
+Mcu.Pin21=PB4
+Mcu.Pin22=PB5
+Mcu.Pin23=PB6
+Mcu.Pin24=PB7
+Mcu.Pin25=PB8
+Mcu.Pin26=PB9
+Mcu.Pin27=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
@@ -37,7 +40,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PB0
 Mcu.Pin8=PB1
 Mcu.Pin9=PB2
-Mcu.PinsNb=25
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Ux
@@ -68,13 +71,17 @@ PA10.GPIO_Label=en3
 PA10.Locked=true
 PA10.Signal=GPIO_Output
 PA12.GPIOParameters=GPIO_Label
-PA12.GPIO_Label=chan2f
+PA12.GPIO_Label=button1
 PA12.Locked=true
-PA12.Signal=GPIO_Output
+PA12.Signal=GPIO_Input
 PA13.GPIOParameters=GPIO_Label
-PA13.GPIO_Label=chan2g
+PA13.GPIO_Label=button2
 PA13.Locked=true
-PA13.Signal=GPIO_Output
+PA13.Signal=GPIO_Input
+PA14.GPIOParameters=GPIO_Label
+PA14.GPIO_Label=button3
+PA14.Locked=true
+PA14.Signal=GPIO_Input
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=led_yellow1
 PA2.Locked=true
@@ -119,6 +126,14 @@ PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=chan2e
 PB11.Locked=true
 PB11.Signal=GPIO_Output
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=chan2f
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=chan2g
+PB13.Locked=true
+PB13.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=chan1c
 PB2.Locked=true
