--- a/SOURCE/STM32_LAB3.ioc
+++ b/SOURCE/STM32_LAB3.ioc
@@ -12,19 +12,19 @@ Mcu.IP2=TIM2
 Mcu.IPNb=3
 Mcu.Name=STM32F103C6Ux
 Mcu.Package=UFQFPN48
-Mcu.Pin0=PA0-WKUP
-Mcu.Pin1=PA1
-Mcu.Pin10=PB10
-Mcu.Pin11=PB11
-Mcu.Pin12=PB12
-Mcu.Pin13=PB13
-Mcu.Pin14=PA8
-Mcu.Pin15=PA9
-Mcu.Pin16=PA10
-Mcu.Pin17=PA12
-Mcu.Pin18=PA13
-Mcu.Pin19=PA14
-Mcu.Pin2=PA2
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PB0
+Mcu.Pin11=PB1
+Mcu.Pin12=PB2
+Mcu.Pin13=PB10
+Mcu.Pin14=PB11
+Mcu.Pin15=PB12
+Mcu.Pin16=PB13
+Mcu.Pin17=PA8
+Mcu.Pin18=PA9
+Mcu.Pin19=PA10
+Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin20=PB3
 Mcu.Pin21=PB4
 Mcu.Pin22=PB5
@@ -33,13 +33,13 @@ Mcu.Pin24=PB7
 Mcu.Pin25=PB8
 Mcu.Pin26=PB9
 Mcu.Pin27=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin3=PA3
-Mcu.Pin4=PA4
-Mcu.Pin5=PA5
-Mcu.Pin6=PA7
-Mcu.Pin7=PB0
-Mcu.Pin8=PB1
-Mcu.Pin9=PB2
+Mcu.Pin3=PA0-WKUP
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA4
+Mcu.Pin8=PA5
+Mcu.Pin9=PA7
 Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -70,18 +70,6 @@ PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=en3
 PA10.Locked=true
 PA10.Signal=GPIO_Output
-PA12.GPIOParameters=GPIO_Label
-PA12.GPIO_Label=button1
-PA12.Locked=true
-PA12.Signal=GPIO_Input
-PA13.GPIOParameters=GPIO_Label
-PA13.GPIO_Label=button2
-PA13.Locked=true
-PA13.Signal=GPIO_Input
-PA14.GPIOParameters=GPIO_Label
-PA14.GPIO_Label=button3
-PA14.Locked=true
-PA14.Signal=GPIO_Input
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=led_yellow1
 PA2.Locked=true
@@ -166,6 +154,21 @@ PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=chan2c
 PB9.Locked=true
 PB9.Signal=GPIO_Output
+PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC13-TAMPER-RTC.GPIO_Label=button1
+PC13-TAMPER-RTC.GPIO_PuPd=GPIO_PULLUP
+PC13-TAMPER-RTC.Locked=true
+PC13-TAMPER-RTC.Signal=GPIO_Input
+PC14-OSC32_IN.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC14-OSC32_IN.GPIO_Label=button2
+PC14-OSC32_IN.GPIO_PuPd=GPIO_PULLUP
+PC14-OSC32_IN.Locked=true
+PC14-OSC32_IN.Signal=GPIO_Input
+PC15-OSC32_OUT.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC15-OSC32_OUT.GPIO_Label=button3
+PC15-OSC32_OUT.GPIO_PuPd=GPIO_PULLUP
+PC15-OSC32_OUT.Locked=true
+PC15-OSC32_OUT.Signal=GPIO_Input
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
